<resources>
    <string name="app_name">Area Calculator</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_title">Area Calculator</string>
    <string name="about_content">The application to help you calculate the areas
                                like Rectangle, Square, Right-Triangle, Triangle,
                                Oval, and Circle.</string>
    <string name="rectangle">Rectangle</string>
    <string name="squre">Square</string>
    <string name="right_triangle">Right_Triangle</string>
    <string name="triangle">Triangle</string>
    <string name="oval">Oval</string>
    <string name="circle">Circle</string>
    <string name="name">Nirada Sukchit 59160104</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a">a:</string>
    <string name="b">b:</string>
    <string name="h">h:</string>
    <string name="r">r:</string>
    <string name="calculate">calculate</string>
    <string name="reset">reset</string>
    <string name="history">history</string>
    <string name="a_x_a">a x a</string>
    <string name="equal">=</string>
    <string name="result">Result</string>
    <string name="clear">Clear</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="share">Share</string>


</resources>
