<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:src="@drawable/logo_about" />

    <TextView
        android:id="@+id/text_title_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/about_title"
        android:textAlignment="center"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/content_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="5dp"
        android:layout_weight="1"
        android:text="@string/about_content"
        android:textAlignment="gravity"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_name_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:text="@string/name"
        android:textAlignment="viewEnd"
        android:textSize="25sp" />


</LinearLayout>