<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="81dp">
        <!-- TODO: Update blank fragment layout -->

        <ImageView
            android:id="@+id/image_squre"
            android:layout_width="299dp"
            android:layout_height="223dp"
            android:layout_marginTop="10dp"
            android:contentDescription="TODO"
            android:src="@drawable/square"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_for_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="50dp"
            android:text="@string/a_x_a"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_squre" />

        <TextView
            android:id="@+id/text_equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equal"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="25sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_for_result"
            app:layout_constraintEnd_toStartOf="@+id/text_result"
            app:layout_constraintStart_toEndOf="@+id/text_for_result" />

        <TextView
            android:id="@+id/text_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:text="@string/result"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="25sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_equal"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button_home"
            android:layout_width="155dp"
            android:layout_height="50dp"
            android:layout_marginTop="235dp"
            android:layout_marginEnd="20dp"
            android:text="@string/home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_result" />

        <Button
            android:id="@+id/button_history"
            android:layout_width="155dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="235dp"
            android:text="@string/history"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_for_result" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>