<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-15dp">
        <!-- TODO: Update blank fragment layout -->


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="220dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/rectangle"
            android:src="@drawable/rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/a"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText_a"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/b"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText_b"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:ems="10"
            android:hint="@string/a"
            android:inputType="numberDecimal"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_a"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editText_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/b"
            android:inputType="numberDecimal"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_b"
            app:layout_constraintTop_toBottomOf="@+id/editText_a"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="155dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/reset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_calculate"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_calculate"
            android:layout_width="155dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:text="@string/calculate"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_reset"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
