<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="299dp"
        android:layout_height="223dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/square"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_a"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/a"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/edittext_a"
        app:layout_constraintEnd_toStartOf="@+id/edittext_a"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edittext_a"
        android:layout_width="271dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/a"
        android:inputType="numberDecimal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_a"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button_history"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/history"
        app:layout_constraintBottom_toTopOf="@+id/button_calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_reset" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toTopOf="@+id/button_calculate"
        app:layout_constraintEnd_toStartOf="@+id/button_history"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
