<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-15dp">
        <!-- TODO: Update blank fragment layout -->


        <Button
            android:id="@+id/button_reset"
            android:layout_width="155dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:text="@string/reset"
            app:layout_constraintBottom_toTopOf="@+id/button_calculate"
            app:layout_constraintEnd_toStartOf="@+id/button_history"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_history"
            android:layout_width="155dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:text="@string/history"
            app:layout_constraintBottom_toTopOf="@+id/button_calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_reset" />

        <Button
            android:id="@+id/button_calculate"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:text="@string/calculate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="300dp"
            android:layout_height="220dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/r"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText_r"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:ems="10"
            android:hint="@string/r"
            android:inputType="numberDecimal"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_r"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
